k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-devops-janitor
  namespace: developerautomation-xavgy
  labels:
    project: developerautomation
    department: cloudengineering
    app: azure-devops-janitor
    component: azure-devops-janitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-devops-janitor
  template:
    metadata:
      labels:
        app: azure-devops-janitor
        project: developerautomation
        department: cloudengineering
        logging_dfds_cloud_format_json: "true"
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      priorityClassName: selfservice
      containers:
      - name: azure-devops-janitor-api
        image: 640590921355.dkr.ecr.eu-west-1.amazonaws.com/{ECR_REPO}:$(Build.BuildId)
        ports:
        - containerPort: 54323
          name: web
        - containerPort: 8080
          name: metrics
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          httpGet:
            port: web
            path: /healthz
      - name: azure-devops-janitor-event-consumer
        image: 640590921355.dkr.ecr.eu-west-1.amazonaws.com/{ECR_REPO}:$(Build.BuildId)
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
