k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-devops-janitor-service
  namespace: developerautomation-xavgy
  labels:
    app: azure-devops-janitor
    project: developerautomation
    department: cloudengineering
    component: azure-devops-janitor
spec:
  ports:
  - name: external
    port: 80
    targetPort: web
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: azure-devops-janitor-api
